[tool.poetry]
name = "lasier-poc"
version = "0.1.0"
description = ""
authors = ["Emerson Max de Medeiros Silva <emerson.silva@invillia.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.67.0"
uvicorn = {extras = ["standard"], version = "^0.14.0"}
aiohttp = {extras = ["speedups"], version = "^3.7.4"}
lasier = "^0.1.1"
UnleashClient = "^4.4.1"
aiocache = {extras = ["redis"], version = "^0.11.1"}
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
mypy = "^0.910"
black = "^21.7b0"
isort = "^5.9.2"
jedi = "^0.18.0"
rope = "^0.19.0"
pytest = "^6.2.4"
coverage = "^5.5"
ipdb = "^0.13.9"
invoke = "^1.6.0"
types-redis = "^3.5.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 80
multi_line_output = 3